--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 <div class="row" *ngIf="cityList;else unset">
   <div
     class="col-lg-3 col-md-4 col-sm-6 col-xs-12"
-    *ngFor="let city of cityList">
+    *ngFor="let city of cityList; index as i;">
     <div class="card">
       <div class="card-header">
         <clr-icon shape="map-marker" class="is-solid"></clr-icon>
@@ -36,8 +36,14 @@
         <div class="card-title">
 
         </div>
-        <div class="card-imgt">
+        <div class="card-text">
           <app-clock2 [tz]="city.tz"></app-clock2>
+        </div>
+        <div class="card-footer">
+          <button
+            class="btn btn-sm btn-link"
+            *ngIf="i > 2; else placeholder"
+            (click)="deleteTz(city)">Вилучити</button>
         </div>
       </div>
     </div>
@@ -48,5 +54,10 @@
     <span class="spinner spinner-sm">
       Loading...
     </span>
+  </div>
+</ng-template>
+<ng-template #placeholder>
+  <div class="placeholder">
+    <button class="btn btn-sm btn-link"></button>
   </div>
 </ng-template>
